--- a/public/css/components/_icon.scss
+++ b/public/css/components/_icon.scss
@@ -6,21 +6,18 @@
 
 /* Icon */
 
-	.icon {
-		@include icon;
-		border-bottom: none;
-		position: relative;
+.icon {
+  @include icon;
+  border-bottom: 0;
+  position: relative;
 
-		> .label {
-			display: none;
-		}
+  > .label {
+    display: none;
+  }
 
-		&.prefix {
-		}
-
-		&.suffix {
-			&:before {
-				float: right;
-			}
-		}
-	}
+  &.suffix {
+    &::before {
+      float: right;
+    }
+  }
+}
