--- a/public/css/components/_mini-post.scss
+++ b/public/css/components/_mini-post.scss
@@ -15,22 +15,21 @@
     border-top: solid 1px _palette(border);
 
     p {
-      font-size: 0.9rem;
+      font-size: .9rem;
       margin: 0;
       padding: 1.25em;
-      background-color: rgba(255,255,255,.7);
+      background-color: rgba(255, 255, 255, .7);
       color: #3c3b3b;
       font-family: "Raleway", Helvetica, sans-serif;
       z-index: 1000;
-      transition: all 0.1s;
-      -webkit-transition: all 0.1s ease-in-out;
+      transition: all .1s;
+      -webkit-transition: all .1s ease-in-out;
     }
 
     p:hover {
-      background-color: rgba(255,255,255,.9);
+      background-color: rgba(255, 255, 255, .9);
     }
   }
-  
   @media (max-width: 480px) {
     .description {
       position: inherit;
@@ -41,8 +40,8 @@
 }
 
 .mini-post {
-  @include vendor( 'display', 'flex');
-  @include vendor( 'flex-direction', 'column');
+  @include vendor('display', 'flex');
+  @include vendor('flex-direction', 'column');
   background: _palette(bg);
   border: solid 1px _palette(border);
   margin: 0 0 _size(element-margin);
@@ -52,13 +51,13 @@
     width: 100%;
 
     img {
-      @include vendor( 'transition', 'transform #{_duration(transition)} ease-out');
+      @include vendor('transition', 'transform #{_duration(transition)} ease-out');
       width: 100%;
     }
 
     &:hover {
       img {
-        @include vendor( 'transform', 'scale(1.05)');
+        @include vendor('transform', 'scale(1.05)');
       }
     }
   }
@@ -68,19 +67,19 @@
     @include padding(1.25em, 1.25em, (0, 3em, 0, 0));
     min-height: 4em;
     position: relative;
-    @include vendor( 'flex-grow', '1');
+    @include vendor('flex-grow', '1');
 
     h3 {
-      font-size: 0.7em;
+      font-size: .7em;
     }
 
     .published {
       display: block;
       font-family: _font(family-heading);
-      font-size: 0.6em;
+      font-size: .6em;
       font-weight: _font(weight-heading);
       letter-spacing: _font(kerning-heading);
-      margin: -0.625em 0 (_size(element-margin) * 0.85) 0;
+      margin: -.625em 0 (_size(element-margin) * .85) 0;
       text-transform: uppercase;
     }
 
@@ -95,8 +94,8 @@
 .mini-posts {
   margin: 0 0 _size(element-margin);
   @include breakpoint(large) {
-     @include vendor( 'display', 'flex');
-    @include vendor( 'flex-wrap', 'wrap');
+    @include vendor('display', 'flex');
+    @include vendor('flex-wrap', 'wrap');
     width: calc(100% + #{_size(element-margin)});
 
     > * {
