--- a/public/css/layout/_contact.scss
+++ b/public/css/layout/_contact.scss
@@ -1,22 +1,21 @@
 // Not found page
 
 #contact {
+  .email-at {
 
-  .email-at{
-    
     margin: 3em 0;
-    
+
     p {
       margin: 0;
     }
-    
+
     .inline-container {
       width: 100%;
 
       span:focus {
+        border: 0;
         display: inline-block;
         outline: none;
-        border: 0;
         text-align: right;
       }
 
@@ -26,12 +25,12 @@
 }
 
 .inline {
-    min-width: 150px;
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-    font-size: 15;
-    outline: 0;
-    border: 0;
-    text-align: right;
+  border: 0;
+  display: inline-block;
+  font-size: 15; // TODO: is this ok?
+  margin: 0;
+  min-width: 150px;
+  outline: 0;
+  padding: 0;
+  text-align: right;
 }
