--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -10,32 +10,14 @@
   html5up.net | @ajlkn
   Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
-
-@include skel-breakpoints(
-  (
-    xlarge: '(max-width: 1680px)',
-    large: '(max-width: 1280px)',
-    medium: '(max-width: 980px)',
-    small: '(max-width: 736px)',
-    xsmall: '(max-width: 480px)'
-  )
-);
-
-@include skel-layout(
-  (
-    reset: 'full',
-    boxModel: 'border',
-    grid: ( gutters: 1em )
-  )
-);
+@include skel-breakpoints(( xlarge: '(max-width: 1680px)', large: '(max-width: 1280px)', medium: '(max-width: 980px)', small: '(max-width: 736px)', xsmall: '(max-width: 480px)' ));
+@include skel-layout(( reset: 'full', boxModel: 'border', grid: ( gutters: 1em ) ));
 
 // Base.
-
 @import 'base/page';
 @import 'base/typography';
 
 // Component.
-
 @import 'components/author';
 @import 'components/blurb';
 @import 'components/box';
@@ -51,7 +33,6 @@
 @import 'components/hamburger';
 
 // Layout.
-
 @import 'layout/header';
 @import 'layout/wrapper';
 @import 'layout/main';
@@ -59,7 +40,6 @@
 @import 'layout/intro';
 @import 'layout/footer';
 @import 'layout/menu';
-
 @import 'layout/resume';
 @import 'layout/skills';
 @import 'layout/contact';
