--- a/server/views/index.tpl.html
+++ b/server/views/index.tpl.html
@@ -26,6 +26,7 @@
     <meta name="msapplication-TileImage" content="/images/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <link rel="canonical" href="index.html">
+    <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
 </head>
 
 <body>
